# electronics-shop-project

./: pyproject.toml
homework-1/: main.py
homework-2/: main.py
homework-6/: main.py
src/: item.py  items_broken.csv  keyboard.py  phone.py
tests/: test_item.py  test_keybord.py  test_phone.py
tests/tests_data/: wrong.csv  wrong_name.csv
